--- a/NoteKeeper.Infra.Orm/NoteKeeper.Infra.Orm.csproj
+++ b/NoteKeeper.Infra.Orm/NoteKeeper.Infra.Orm.csproj
@@ -13,13 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ModuloCategoria\" />
-    <Folder Include="ModuloNota\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
