--- a/NoteKeeper.Aplicacao/NoteKeeper.Aplicacao.csproj
+++ b/NoteKeeper.Aplicacao/NoteKeeper.Aplicacao.csproj
@@ -12,4 +12,13 @@
     <Folder Include="ModuloNota\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentResults" Version="3.15.2" />
+    <PackageReference Include="FluentValidation" Version="11.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NoteKeeper.Dominio\NoteKeeper.Dominio.csproj" />
+  </ItemGroup>
+
 </Project>
